crates/language-v2/tests/src/fail/reachability/unused_version/test.stderr
error: Item 'Bar' is not used in versions: 1.0.0..2.0.0
  --> src/fail/reachability/unused_version/test.rs:19:31
   |
19 |                 Struct(name = Bar, fields = (field_1 = Optional(reference = Baz))),
   |                               ^^^
